opam-version: "2.0"
name: "satysfi-class-stjarticle"
version: "1.3.2"
synopsis: "Extended SATySFi document package for Japanese"
description: """
Extended SATySFi document package for Japanese.

This requires Satyrographos to install. See https://github.com/na4zagin3/satyrographos.
"""
maintainer: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
authors: "puripuri2100 <puripuri2100@gmail.com>"
license: "LGPL-3.0"
homepage: "https://github.com/puripuri2100/stjarticle"
bug-reports: "https://github.com/puripuri2100/stjarticle/issues"
dev-repo: "git+https://github.com/puripuri2100/stjarticle.git"
depends: [
  "satysfi" {>= "0.0.3" & < "0.0.4"}
  "satyrographos" {>= "0.0.1" & < "0.0.2"}
]
build: [ ]
install: [
  [make "-f" "Makefile" "install" "LIBDIR=%{share}%/satysfi"]
]
remove: [
  [make "-f" "Makefile" "uninstall" "LIBDIR=%{share}%/satysfi"]
]
